--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <script>
   function sayYes() {
     
-  }const message =
+  const message =
         "Yayyy! 💖 I said YES 😄\n" +
         "You are my favorite person 🥰\n" +
         "Bestfriends forever 🫂";
@@ -31,6 +31,7 @@
         "https://wa.me/" + 918169164659 + "hi" + encodeURIComponent(message);
 
       window.location.href = whatsappURL;
+  }
   function moveNo() {
     const btn = document.querySelector('.no');
     btn.style.position = "absolute";
