--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
 <script>
   function sayYes() {
-    
-  alert("Alas na mazyakde parat...😄");        
+    document.getElementById("result").innerText =
+    "Yes 💖 I said YES 😄 Bestfriends forever 🫂";       
   }
   function moveNo() {
     const btn = document.querySelector('.no');
