--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
 <script>
   function sayYes() {
-    document.getElementById("result").innerText =
-    "Yes 💖 I said YES 😄 Bestfriends forever 🫂";       
+    alert(
+    " 💖 Alas na parat mazyakadechhh...😄 Bestfriends forever 🫂";       
   }
   function moveNo() {
     const btn = document.querySelector('.no');
