--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   <img
     id="yesImage"
-    src="https://i.imgur.com/0XKzn9H.png"
+    src="yes.PNG"
     style="display:none; width:250px;"
   >
 
