--- a/index.html
+++ b/index.html
@@ -18,11 +18,8 @@
   </div>
   <br><br>
 
-  <img
-    id="yesImage"
-    src="yes.png"
-    style="display:none; width:250px;"
-  >
+  <img src="yes.png" alt="Valentine Image" width="300">
+
 
 <script>
   function sayYes() {
