--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </div>
   <br><br>
 
-  <img id="valentineImg" src="vinaya.jpg"  width="300" style="display:none;">
+  <img id="valentineImg" src="vinaya.jpg" width="200" height="300" style="display:none;">
 
 
 
