--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 
   <style>
     body {
-      font-family: 'Arial', sans-serif;
+      font-family: Arial, sans-serif;
       text-align: center;
       background: linear-gradient(135deg, #ffd1dc, #ffe6f0);
-      overflow: hidden;
+      margin: 0;
     }
 
     .card {
@@ -22,7 +22,7 @@
     }
 
     button {
-      padding: 10px 20px;
+      padding: 10px 22px;
       font-size: 16px;
       border: none;
       border-radius: 20px;
@@ -39,43 +39,48 @@
       background: #ccc;
     }
 
-    #valentineImg {
-      width: 200px;
-      height: 300px;
-      margin-top: 20px;
-      border-radius: 15px;
-      opacity: 0;
-      transition: opacity 0.6s ease, transform 0.6s ease;
-      transform: scale(0.9);
-    }
-
-    .show {
-      opacity: 1;
-      transform: scale(1);
-    }
-
-    .heart {
+    /* FULLSCREEN OVERLAY */
+    .overlay {
       position: fixed;
-      bottom: -20px;
-      font-size: 20px;
-      animation: float 4s linear infinite;
+      inset: 0;
+      background: rgba(0,0,0,0.85);
+      display: none;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+      color: white;
+      z-index: 999;
+      animation: fadeIn 0.6s ease;
     }
 
-    @keyframes float {
-      from {
-        transform: translateY(0);
-        opacity: 1;
-      }
-      to {
-        transform: translateY(-100vh);
-        opacity: 0;
-      }
+    .overlay img {
+      width: 220px;
+      height: 320px;
+      border-radius: 20px;
+      margin-bottom: 20px;
+      box-shadow: 0 15px 30px rgba(0,0,0,0.5);
+    }
+
+    .overlay h1 {
+      font-size: 32px;
+      margin-bottom: 10px;
+    }
+
+    .overlay p {
+      font-size: 18px;
+      opacity: 0.9;
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; }
+      to { opacity: 1; }
     }
   </style>
 </head>
 
 <body>
 
+  <!-- NORMAL CARD -->
   <div class="card">
     <h2>Chinu 💗<br>Will you be my Valentine?</h2>
 
@@ -85,19 +90,21 @@
     <p style="color:#ff4d88;margin-top:10px;">
       Please Say "NO"....😈
     </p>
+  </div>
 
-    <img id="valentineImg" src="vinaya.jpg" alt="Valentine">
+  <!-- FULLSCREEN PROPOSAL -->
+  <div class="overlay" id="proposal">
+    <img src="vinaya.jpg" alt="Valentine">
+    <h1>She said YES 💍💖</h1>
+    <p>Bestfriends forever 🫂</p>
   </div>
 
   <script>
     function sayYes() {
-      alert("💖 Alas na parat mazyakadechhh...😄 Bestfriends forever 🫂");
+      document.getElementById("proposal").style.display = "flex";
 
-      const img = document.getElementById("valentineImg");
-      img.classList.add("show");
-
-      for (let i = 0; i < 20; i++) {
-        createHeart();
+      if (document.documentElement.requestFullscreen) {
+        document.documentElement.requestFullscreen();
       }
     }
 
@@ -107,21 +114,7 @@
       btn.style.top = Math.random() * 80 + "%";
       btn.style.left = Math.random() * 80 + "%";
     }
-
-    function createHeart() {
-      const heart = document.createElement("div");
-      heart.className = "heart";
-      heart.innerHTML = "💖";
-      heart.style.left = Math.random() * 100 + "vw";
-      heart.style.animationDuration = (Math.random() * 2 + 3) + "s";
-      document.body.appendChild(heart);
-
-      setTimeout(() => {
-        heart.remove();
-      }, 4000);
-    }
   </script>
 
 </body>
 </html>
-
