--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
   <!-- NORMAL CARD -->
   <div class="card">
-    <h2>Chinu 💗<br>Will you be my Valentine?</h2>
+    <h2>Chinu 💗<br>Will you be my BESTFRIEND ?</h2>
 
     <button class="yes" onclick="sayYes()">Yes 💖</button>
     <button class="no" onmouseover="moveNo()">No 🙈</button>
