--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
   <!-- NORMAL CARD -->
   <div class="card">
-    <h2>Chinu 💗<br>Will you be my BESTFRIEND ?</h2>
+    <h2>Chinu 💗<br>Will you be my BESTFRIEND forever ?</h2>
 
     <button class="yes" onclick="sayYes()">Yes 💖</button>
     <button class="no" onmouseover="moveNo()">No 🙈</button>
@@ -85,7 +85,7 @@
 
   <!-- FULLSCREEN PROPOSAL -->
   <div class="overlay" id="proposal">
-    <img id="proposalImg" src="v.jpg" alt="Valentine">
+    <img id="proposalImg" src="vv.png" alt="Valentine">
     <h1>आलास ना रे, शेवटी तुला माझ्या मागे यावंच लागेल..😏💖</h1>
     <p>Bestfriends forever 🫂</p>
   </div>
